[package]
name = "stlc"
version = "0.1.0"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "simply_typed"
harness = false

